# ctdcal

./: .gitignore  environment.yml  pyproject.toml
ctdcal/: cfg.json  cfg.yaml  common.py  config.py  logging_conf.yml  odf_io.py  pom.yml
ctdcal/parsers/: common.py  parse_911ctd.py  parse_911xmlcon.py  parse_ctd_911.py  parse_salt_odf.py
ctdcal/parsers/extras/: parse_ctd_911xmlcon.py
ctdcal/parsers/test/: test_ctd_911.py
ctdcal/parsers/test/ctd_911/raw/01/: 00101.XMLCON  00101.bl  00101.hdr  00201.bl  00201.hdr
ctdcal/processors/: common.py  process_911ctd.py  seabird_common.py
ctdcal/scripts/: odf_process_new.py  pomegranate.py
ctdcal/tests/: test_common.py
ctdcal/tests/common/: test_cfg.yaml
notebooks/: 00101_coeffs.json  00101_config.json  00201_coeffs.json  00201_config.json
