[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ctdcal"
dynamic = ["version"]
description = "CTD and bottle data processing package from SIO ODF"
authors = [
    { name = "Joseph Gum" },
    { name = "Andrew Barna" },
    { name = "Michael Kovatch" }
]
maintainers = [
    { name = "Aaron Mau", email = "ajmau@ucsd.edu" },
    { name = "Allen Smith", email = "als026@ucsd.edu" }
]
keywords = ["oceanography", "seawater", "TEOS-10", "ctd", "calibration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Oceanography"
]
dependencies = [
    "bokeh",
    "click",
    "gsw",
    "matplotlib",
    "munch",
    "numpy",
    "pandas",
    "PyYAML",
    "requests",
    "scipy"
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = { file = "LICENSE.md" }

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff"
]
docs = [
    "Sphinx==7.3.3",
    "jupyter==1.0.0",
    "furo==2024.1.29",
    "nbsphinx==0.9.4",
    "jupytext"
]
tests = [
    "ctdcal[dev]",
    "mypy",
    "pytest-cov"
]
complete = [
    "ctdcal[tests,docs]"
]

[project.urls]
Homepage = "https://github.com/SIO-ODF/ctdcal"
Documentation = "https://ctdcal.readthedocs.io/en/latest/"

[project.scripts]
ctdcal = "ctdcal.__main__:cli"

[tool.hatch.build.targets.sdist]
include = ["/ctdcal*", "*.md"]
exclude = ["tests*"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "ctdcal/_version.py"
template = 'version = "{version}"'

#[tool.setuptools_scm]
#version_file = "ctdcal/_version.py"
#version_file_template = 'version = "{version}"'

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
# Leave the quotes of all strings unchanged
quote-style = "preserve"

[tool.ruff.lint]
select = ["E", "F", "W1", "W292", "N"]
ignore = [
    "E266",
]

[tool.mypy]
python_version = 3.11
files = "ctdcal/io.py"

[[tool.mypy.overrides]]
module = [
    "pandas",
    "numpy",
    "requests"
]
ignore_missing_imports = true